# cargo-sdl-apk

./: Cargo.toml  README.md
example-project/: Cargo.toml
src/: android_project.rs  build_bin_as_lib.rs  main.rs  util.rs
