[package]
name = "cargo-sdl-apk"
version = "0.1.1"
edition = "2021"
description="Build Android packages that use SDL"
homepage = "https://github.com/riseupgroup/cargo-sdl-apk"
repository = "https://github.com/riseupgroup/cargo-sdl-apk"
license = "MIT"

[dependencies]
cargo = "0.70.1"
cargo-util = "0.2.3"
fs_extra = "1.3.0"
toml = "0.7.3"
symlink = "0.1.0"
pico-args = "0.5.0"
regex = "1.9.5"
image = "0.24.7"

